[package]
name = "mlc_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
# Docu
get-size = { version = "0.1.4", features = ["derive"] }
schemars = { version = "0.8.16", features = ["chrono", "uuid1", "derive"] }
# Misc
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4", "js"] }