[package]
name = "mlc_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
reqwest = "0.11.24"
cfg-if = "1.0.0"
gloo-net = "0.5.0"
dioxus-html-macro = "0.3.0"
log = "0.4.20"
wasm-logger = "0.2.0"
mlc_common = { path = "../mlc_common" }
serde = "1.0.197"
wasm-bindgen = "0.2.91"
serde_json = "1.0.108"
gloo-utils = "0.2.0"
futures = "0.3.30"
async-std = "1.12.0"
dioxus-router = "0.4.3"
clap = { version = "4.5.1", features = ["derive"] }
