[package]
name = "mlc_dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0", features = ["router", "web"] }
# Web
gloo-net = "0.5.0"
gloo-utils = "0.2.0"
gloo-storage = "0.3.0"
reqwest = "0.12.2"
# Data
mlc_common = { path = "../mlc_common" }
serde = "1.0.197"
serde_json = "1.0.115"
# Logging
log = "0.4.21"
wasm-logger = "0.2.0"
# Async
async-std = "1.12.0"
futures = "0.3.30"
# Misc
color-art = "0.3.8"
chrono = { version = "0.4.37" }
