[package]
name = "mlc_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = { version = "0.1.1" }
reqwest = { version = "0.12.5", features = ["json"] }
# Serde
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_with = { version = "3.9.0", features = ["chrono_0_4"] }
ciborium = { version = "0.2.2", features = ["std"] }
# Misc
directories = "5.0.1"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "*", features = ["serde"] }
regex = { version = "1.10.6" }
tap = "*"
mlc_common = { path = "../mlc_common" }
# Async
pollster = { version = "*" }
crossbeam = "0.8.4"
# Endpoints
sacn = "0.4.4"
artnet_protocol = "0.4.2"
open_dmx = "1.1.1"
# Doku
rocket_okapi = { path = "../../okapi/rocket-okapi", features = [
    "rocket_ws",
    "swagger",
    "uuid",
    "rapidoc",
] } #TODO: Only until pull request is merged and release is made
schemars = { version = "0.8.21", features = ["derive", "uuid1", "chrono"] }
get-size = { version = "0.1.4", features = ["derive"] }
